--- a/gb/19/6/11/n11315434.md
+++ b/gb/19/6/11/n11315434.md
@@ -1,50 +1,55 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dfh1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/1.jpg" title="´ó¼ÍÔª"></a><a href="https://github.com/dfh1/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/3.jpg" title="¹ú¼ÊÐÂÎÅ"></a><a href="https://github.com/dfh1/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/4.jpg" title="´óÂ½ÐÂÎÅ"></a><a href="https://github.com/dfh1/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/5.jpg" title="ÆÀÂÛ"></a><a href="https://github.com/dfh1/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/6.jpg" title="ÎÄ»¯"></a><a href="https://github.com/dfh1/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/7.jpg" title="Éú»î"></a><a href="https://github.com/dfh1/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/8.jpg" title="ÓéÀÖ"></a><a href="https://github.com/dfh1/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/9.jpg" title="½¡¿µ"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/10.jpg" title="¹ºÎï"></a><a href="https://www.supportepoch.org/donation?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyhomepage"><img src="https://raw.githubusercontent.com/dfh1/1/master/t/djy/12.jpg" title="¾è¿î"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://git.io/fjCRf">ÉçÂÛ</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5657.md#1">ÈýÍË</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf6123.md#1">Ëß½­</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1176117.md#1">ÖÐ¹²Âô¹ú</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5773.md#1">Ì°¸¯ÒùÂÒ | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1176115.md#1">´Ü¸ÄÀúÊ·</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1176107.md#1">µ³¿ý»­Æ¤</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1320400.md#1">ÖÐ¹²¼äµý</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1176114.md#1">ÆÆ»µ´«Í³</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5287.md#1">¶ñ¹áÂúÓ¯</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/ncid278.md#1">ÈËÈ¨</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1176111.md#1">ÆÈº¦</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1235328.md#1">Êé¼®</a> | <a target="_blank" href="https://github.com/dfh1/2/blob/master/README.md?zsrh#1">·­Ç½</a></p><p><a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5562.md#1">Î±»ð</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf4378.md#1">ÎÊ´ð</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5792.md#1">ÆÊÎö</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5735.md#1">Á½°¶±È¶Ô</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf6119.md#1">¸÷¹ú°ý½±</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf6120.md#1">ÃñÖÚÉùÔ®</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf1188594.md#1">ÄÑÍü¼ÇÒä</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf3180.md#1">º£Íâºë´«</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5410.md#1">ÍòÈËÉÏ·Ã</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5640.md#1">»ª¸®¾Û½¹</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf4386.md#1">Ö§³Ö</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf4389.md#1">ÕæÏà</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf5790.md#1">Ê¥Ôµ</a> | <a target="_blank" href="https://github.com/dfh1/djy/blob/master/gb/nf4786.md#1">ÉñÔÏ</a></td></tr>
-<tr><td VALIGN=TOP width="626"><h2 align=center>ÒÉ»¼ÒÖÓôÖ¢ ´óÂ½ÖªÃûÄÐ¸ßÒôÑîÑô´Ó26Â¥×¹Íö</h2>
-
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/1.jpg" title="å¤§çºªå…ƒ"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/3.jpg" title="å›½é™…æ–°é—»"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/4.jpg" title="å¤§é™†æ–°é—»"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/5.jpg" title="è¯„è®º"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/6.jpg" title="æ–‡åŒ–"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/7.jpg" title="ç”Ÿæ´»"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/8.jpg" title="å¨±ä¹"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/9.jpg" title="å¥åº·"><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/10a.jpg" title="ç‹¬å®¶"></a><a href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/qtwlwd303/www/master/t/djy/12a.jpg" title="å¤´æ¡"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/9p.md#1">ç¤¾è®º</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5657.md#1">ä¸‰é€€</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6124.md#1">è¯‰æ±Ÿ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176117.md#1">ä¸­å…±å–å›½</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5773.md#1">è´ªè…æ·«ä¹±</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176115.md#1">çªœæ”¹åŽ†å²</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176107.md#1">å…šé­ç”»çš®</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1320400.md#1">ä¸­å…±é—´è°</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176114.md#1">ç ´åä¼ ç»Ÿ</a> | <a target="_blank" href="https://github.com/qtwlwd303/ntdtv/blob/master/gb/prog447_1.md#1">æ¶è´¯æ»¡ç›ˆ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/ncid278.md#1">äººæƒ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1176111.md#1">è¿«å®³</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">æœŸåˆŠ</a> | <a target="_blank" href="https://github.com/qtwlwd303/www/blob/master/README.md?zsrh#8">ç¿»å¢™</a></p><p><a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5562.md#1">ä¼ªç«</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4378.md#1">é—®ç­”</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5792.md#1">å‰–æž</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5735.md#1">ä¸¤å²¸æ¯”å¯¹</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6119.md#1">å„å›½è¤’å¥–</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf6120.md#1">æ°‘ä¼—å£°æ´</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf1188594.md#1">éš¾å¿˜è®°å¿†</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf3180.md#1">æµ·å¤–å¼˜ä¼ </a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5410.md#1">ä¸‡äººä¸Šè®¿</a> | <a target="_blank" href="https://github.com/qtwlwd303/ntdtv/blob/master/gb/prog1530_1.md#1">å’Œå¹³æŠ—è®®</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4386.md#1">æ”¯æŒ</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4389.md#1">çœŸç›¸</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf5790.md#1">åœ£ç¼˜</a> | <a target="_blank" href="https://github.com/qtwlwd303/djy/blob/master/gb/nf4786.md#1">ç¥žéŸµ</a></td></tr>
+<tr><td VALIGN=TOP width="626"><h2 align=center>ç–‘æ‚£æŠ‘éƒç—‡ å¤§é™†çŸ¥åç”·é«˜éŸ³æ¨é˜³ä»Ž26æ¥¼å äº¡</h2>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2020/07/0701_25-320x200.jpg" />
 <h6></h6>
 <hr>
-<p>¡¾´ó¼ÍÔª2019Äê06ÔÂ11ÈÕÑ¶¡¿£¨´ó¼ÍÔª¼ÇÕßÙ¡Òà¼Ó×ÛºÏ±¨µ¼£©´óÂ½¶à¸öÏûÏ¢À´Ô´±íÊ¾£¬ÖªÃûÄÐ¸ßÒô¸è³ª¼Ò<a href="https://github.com/dfh1/djy/blob/master/gb/tag/%E6%9D%A8%E9%98%B3.md">ÑîÑô</a>£¬6ÔÂ10ÈÕ<a href="https://github.com/dfh1/djy/blob/master/gb/tag/%E5%9D%A0%E6%A5%BC.md">×¹Â¥</a><a href="https://github.com/dfh1/djy/blob/master/gb/tag/%E8%BA%AB%E4%BA%A1.md">ÉíÍö</a>¡£ÓÐÖªÇéÈËÊ¿Í¸Â¶£¬ÑîÑôÒÉÒòÒÖÓôÖ¢£¬µ±Ê±ÊÇ´Ó26Â¥ÌøÏÂ¡£</p>
-<p>6ÔÂ11ÈÕÁãµã£¬´óÂ½¸èÊÖÁõÊæ¶«·¢±íÒ»ÌõÃå»³ÖªÃûÄÐ¸ßÒô¸è³ª¼Ò<a href="https://github.com/dfh1/djy/blob/master/gb/tag/%E6%9D%A8%E9%98%B3.md">ÑîÑô</a>µÄÎ¢²©¡£Ô­À´ÔÚ6ÔÂ10ÈÕÏÂÎç13Ê±×óÓÒ£¬ÑîÑô²»ÐÒÀëÊÀ¡£</p>
-<p>¾ÝÂ½Ã½ÌÚÑ¶Íø11ÈÕ±¨µ¼£¬¾­¶à·½´òÌý£¬ÁË½âµ½ÑîÑôÀëÊÀµÄÏûÏ¢ÊôÊµ¡£ÑîÑôÉúÇ°µÄÍ¬ÊÂ¡¢ÖÐÑë¸è¾çÔºµÄÄÚ²¿ÈËÊ¿Í¸Â¶£¬ÑîÑôÊÇ´Ó26Â¥ÌøÂ¥<a href="https://github.com/dfh1/djy/blob/master/gb/tag/%E8%BA%AB%E4%BA%A1.md">ÉíÍö</a>¡£</p>
-<p>Ò»Î»ÓëÑîÑôÏàÊìµÄ½ÌÊ¦±íÊ¾£¬ÑîÑôÇ°Ò»¶ÎÊ±¼ä²ÅÓÐÁËÒ»¶ÔË«°ûÌ¥¡£Ëû¶ÔÑîÑôÀëÊÀµÄÏûÏ¢¸Ðµ½´íãµ¡£</p>
-<p>Ôø¾­ºÍÑîÑôºÏ×÷¹ýµÄÖªÇéÈËÊ¿¶ÔÃ½Ìå±íÊ¾£¬¼´±ãÊÇµ±ÌìÔçÉÏ£¬ÑîÑôµÄÆÞ×ÓÒ²Ã»ÓÐ·¢ÏÖÓÐÊ²Ã´Òì³£¡£¶øÇÒ¾ÍÔÚ6ÔÂ8ÈÕ£¬ÑîÑô»¹ÔÚ¹«ÖÚºÅÀï¸ø¸èÃÔÉÏÍøÂç¿Î£¬Ã»·¢ÏÖËûÓÐÈÎºÎ×ÔÉ±Õ÷Õ×¡£</p>
-<p>Ã½ÌåÔ®ÒýÄäÃûÏûÏ¢Ô´³Æ£º¡°ËûµÃÁËÒÖÓôÖ¢£¬´Ó26Â¥ÌøÏÂ¡£ËûÊÇ¸è³ª¼ÒÀïÉÙÓÐ¸ÖÇÙµ¯µÃºÃµÄ£¬ÈËÒ²ºÜ¾«Éñ¡£¡±</p>
-<p>¶ÔÓÚÑîÑôµÄÄêÁä£¬Ä¿Ç°ÍøÂç³öÏÖ¼¸ÖÖ²»Í¬µÄËµ·¨£º¶àÊýÃ½Ìå±¨µ¼ÑîÑô½ñÄê45Ëê£»¶øÑîÑôµÄÎ¢ÐÅ¹«ºÅ¡°ÑîÑôÉùÀÖÛÓ¡±ÏÔÊ¾£¬Ëû½ñÄê41Ëê£»»¹ÓÐÃ½ÌåËµËû44Ëê¡£ÑîÑôÉúÇ°ËùÔÚµÄÊ×¶¼Ê¦·¶´óÑ§ÒôÀÖÑ§ÔºÍøÕ¾µÄ½éÉÜÖÐ£¬Ò²Ã»ÓÐÌá¼°Æä³öÉúÄêÔÂ¡£</p>
-<p>ÏÖÔÚ·­¿´¹ØÓÚÑîÑôµÄ°Ù¿Æ½éÉÜ£¬Ò³ÃæÒÑ±ä³É»ÒÉ«£¬ÆäÉúÆ½½éÉÜÖÐÒ²¼ÓÉÏÁË×îºóÒ»ÌõÄÚÈÝ£º¡°2019Äê6ÔÂ10ÈÕ£¬ÑîÑôÒò²¡²»ÐÒÀëÊÀ¡£¡±</p>
-<p>¹«¿ª×ÊÁÏÏÔÊ¾£¬ÑîÑôÔøÈÎÊ×¶¼Ê¦·¶´óÑ§ÉùÀÖ½ÌÊÚ¡¢Ë¶Ê¿Éúµ¼Ê¦¡¢¹ú¼ÒÒ»¼¶ÑÝÔ±¡¢ÖÐÑë¸è¾çÔºÌØÆ¸ÒÕÊõ¼Ò¡£ËûÔøÔÚÒâ´óÀû¡¢µÂ¹ú¡¢¶íÂÞË¹¡¢ÐÙÑÀÀû¡¢¿ËÂÞµØÑÇ¡¢ÒÔÉ«ÁÐ¡¢º«¹úµÈ¼¸Ê®¸ö¹ú¼ÒµÄ¸è¾ç¼°ÒôÀÖ»áÎèÌ¨ÑÝ³ª£¬Ö÷ÑÝÊýÊ®²¿ÖÐÍâ¸è¾ç¡£ÔøÈëÑ¡ÑëÊÓ¡°ÖÐ¹úÊ®´óÄÐ¸ßÒô¡±£¬»ñµÃÎÚ¿ËÀ¼¹ú¼ÒÒÕÊõÑ«ÕÂµÈ¡£</p>
-<p>ÔðÈÎ±à¼­£ºÑîÃ÷</p>
+	<p>ã€å¤§çºªå…ƒ2019å¹´06æœˆ11æ—¥è®¯ã€‘ï¼ˆå¤§çºªå…ƒè®°è€…ä½Ÿäº¦åŠ ç»¼åˆæŠ¥å¯¼ï¼‰å¤§é™†å¤šä¸ªæ¶ˆæ¯æ¥æºè¡¨ç¤ºï¼ŒçŸ¥åç”·é«˜éŸ³æ­Œå”±å®¶<ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E6%9D%A8%E9%98%B3.md#1">æ¨é˜³</a>ï¼Œ6æœˆ10æ—¥<ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E5%9D%A0%E6%A5%BC.md#1">å æ¥¼</a><ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E8%BA%AB%E4%BA%A1.md#1">èº«äº¡</a>ã€‚æœ‰çŸ¥æƒ…äººå£«é€éœ²ï¼Œæ¨é˜³ç–‘å› æŠ‘éƒç—‡ï¼Œå½“æ—¶æ˜¯ä»Ž26æ¥¼è·³ä¸‹ã€‚</p>
+<p>6æœˆ11æ—¥é›¶ç‚¹ï¼Œå¤§é™†æ­Œæ‰‹åˆ˜èˆ’ä¸œå‘è¡¨ä¸€æ¡ç¼…æ€€çŸ¥åç”·é«˜éŸ³æ­Œå”±å®¶<ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E6%9D%A8%E9%98%B3.md#1">æ¨é˜³</a>çš„å¾®åšã€‚åŽŸæ¥åœ¨6æœˆ10æ—¥ä¸‹åˆ13æ—¶å·¦å³ï¼Œæ¨é˜³ä¸å¹¸ç¦»ä¸–ã€‚</p>
+<p>æ®é™†åª’è…¾è®¯ç½‘11æ—¥æŠ¥å¯¼ï¼Œç»å¤šæ–¹æ‰“å¬ï¼Œäº†è§£åˆ°æ¨é˜³ç¦»ä¸–çš„æ¶ˆæ¯å±žå®žã€‚æ¨é˜³ç”Ÿå‰çš„åŒäº‹ã€ä¸­å¤®æ­Œå‰§é™¢çš„å†…éƒ¨äººå£«é€éœ²ï¼Œæ¨é˜³æ˜¯ä»Ž26æ¥¼è·³æ¥¼<ahref="https://github.com/qtwlwd303/djy/blob/master/gb/tag/%E8%BA%AB%E4%BA%A1.md#1">èº«äº¡</a>ã€‚</p>
+<p>ä¸€ä½ä¸Žæ¨é˜³ç›¸ç†Ÿçš„æ•™å¸ˆè¡¨ç¤ºï¼Œæ¨é˜³å‰ä¸€æ®µæ—¶é—´æ‰æœ‰äº†ä¸€å¯¹åŒèƒžèƒŽã€‚ä»–å¯¹æ¨é˜³ç¦»ä¸–çš„æ¶ˆæ¯æ„Ÿåˆ°é”™æ„•ã€‚</p>
+<p>æ›¾ç»å’Œæ¨é˜³åˆä½œè¿‡çš„çŸ¥æƒ…äººå£«å¯¹åª’ä½“è¡¨ç¤ºï¼Œå³ä¾¿æ˜¯å½“å¤©æ—©ä¸Šï¼Œæ¨é˜³çš„å¦»å­ä¹Ÿæ²¡æœ‰å‘çŽ°æœ‰ä»€ä¹ˆå¼‚å¸¸ã€‚è€Œä¸”å°±åœ¨6æœˆ8æ—¥ï¼Œæ¨é˜³è¿˜åœ¨å…¬ä¼—å·é‡Œç»™æ­Œè¿·ä¸Šç½‘ç»œè¯¾ï¼Œæ²¡å‘çŽ°ä»–æœ‰ä»»ä½•è‡ªæ€å¾å…†ã€‚</p>
+<p>åª’ä½“æ´å¼•åŒ¿åæ¶ˆæ¯æºç§°ï¼šâ€œä»–å¾—äº†æŠ‘éƒç—‡ï¼Œä»Ž26æ¥¼è·³ä¸‹ã€‚ä»–æ˜¯æ­Œå”±å®¶é‡Œå°‘æœ‰é’¢ç´å¼¹å¾—å¥½çš„ï¼Œäººä¹Ÿå¾ˆç²¾ç¥žã€‚â€</p>
+<p>å¯¹äºŽæ¨é˜³çš„å¹´é¾„ï¼Œç›®å‰ç½‘ç»œå‡ºçŽ°å‡ ç§ä¸åŒçš„è¯´æ³•ï¼šå¤šæ•°åª’ä½“æŠ¥å¯¼æ¨é˜³ä»Šå¹´45å²ï¼›è€Œæ¨é˜³çš„å¾®ä¿¡å…¬å·â€œæ¨é˜³å£°ä¹å¡¾â€æ˜¾ç¤ºï¼Œä»–ä»Šå¹´41å²ï¼›è¿˜æœ‰åª’ä½“è¯´ä»–44å²ã€‚æ¨é˜³ç”Ÿå‰æ‰€åœ¨çš„é¦–éƒ½å¸ˆèŒƒå¤§å­¦éŸ³ä¹å­¦é™¢ç½‘ç«™çš„ä»‹ç»ä¸­ï¼Œä¹Ÿæ²¡æœ‰æåŠå…¶å‡ºç”Ÿå¹´æœˆã€‚</p>
+<p>çŽ°åœ¨ç¿»çœ‹å…³äºŽæ¨é˜³çš„ç™¾ç§‘ä»‹ç»ï¼Œé¡µé¢å·²å˜æˆç°è‰²ï¼Œå…¶ç”Ÿå¹³ä»‹ç»ä¸­ä¹ŸåŠ ä¸Šäº†æœ€åŽä¸€æ¡å†…å®¹ï¼šâ€œ2019å¹´6æœˆ10æ—¥ï¼Œæ¨é˜³å› ç—…ä¸å¹¸ç¦»ä¸–ã€‚â€</p>
+<p>å…¬å¼€èµ„æ–™æ˜¾ç¤ºï¼Œæ¨é˜³æ›¾ä»»é¦–éƒ½å¸ˆèŒƒå¤§å­¦å£°ä¹æ•™æŽˆã€ç¡•å£«ç”Ÿå¯¼å¸ˆã€å›½å®¶ä¸€çº§æ¼”å‘˜ã€ä¸­å¤®æ­Œå‰§é™¢ç‰¹è˜è‰ºæœ¯å®¶ã€‚ä»–æ›¾åœ¨æ„å¤§åˆ©ã€å¾·å›½ã€ä¿„ç½—æ–¯ã€åŒˆç‰™åˆ©ã€å…‹ç½—åœ°äºšã€ä»¥è‰²åˆ—ã€éŸ©å›½ç­‰å‡ åä¸ªå›½å®¶çš„æ­Œå‰§åŠéŸ³ä¹ä¼šèˆžå°æ¼”å”±ï¼Œä¸»æ¼”æ•°åéƒ¨ä¸­å¤–æ­Œå‰§ã€‚æ›¾å…¥é€‰å¤®è§†â€œä¸­å›½åå¤§ç”·é«˜éŸ³â€ï¼ŒèŽ·å¾—ä¹Œå…‹å…°å›½å®¶è‰ºæœ¯å‹‹ç« ç­‰ã€‚</p>
+<p>è´£ä»»ç¼–è¾‘ï¼šæ¨æ˜Ž</p>
+	
 <hr>
 
-#### ±¾ÎÄ×ª×Ô<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>£¨¹úÄÚÐèÓÃ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>²ÅÄÜ·ÃÎÊ£©
-> Ô­ÎÄ£º<a href="http://www.epochtimes.com/gb/19/6/11/n11315434.htm">ÒÉ»¼ÒÖÓôÖ¢ ´óÂ½ÖªÃûÄÐ¸ßÒôÑîÑô´Ó26Â¥×¹Íö</a>
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>Ïà¹ØÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/18/7/12/n10558352.htm">¼Ó¹ú¼ÎººÁÖÒµÕ©Æ­°¸ Ç°¸ß¹Ü±»·£1100Íò¼ÓÔª</a></li>
-> <li><a href="http://www.epochtimes.com/gb/18/6/15/n10485612.htm">»ëË®¹«Ë¾ÔÙ³öÊÖ Ö¸¿ØÖÐ¹ú¶¥¼¶¼Ò½Ì¹«Ë¾ÆÛÕ©</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/12/21/n9978508.htm">¸°ÃÀÉÏÊÐÓö´ì ×¨¼Ò£ºÖÐ×ÊÆóÒµ´æÔÚ³ÏÐÅÎ£»ú</a></li>
-> <li><a href="http://www.epochtimes.com/gb/17/12/17/n9966962.htm">ÔÚÃÀÉÏÊÐÖÐ¹ú¹«Ë¾ÈÃÍ¶×ÊÕß¿÷´óÁË</a></li>
 
-#### ÏÂÔØ<a href="https://git.io/fjmgJ">·­Ç½Èí¼þ</a>ä¯ÀÀ<a href="http://www.epochtimes.com">´ó¼ÍÔª</a>ÈÈÃÅÐÂÎÅ£º
-> <li><a href="http://www.epochtimes.com/gb/19/6/10/n11312764.htm">¼¸´óÒì³£ÐÅÏ¢ ±©Â¶ÖÐ¹úÊ§ÒµÎÊÌâÑÏÖØ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/10/n11313426.htm">´ÓÅúÍ¶½µÅÉµ½ÔÙ³ªÖÐÃÀºÏ×÷ µ³Ã½µ÷×Ó±äÈí£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/11/n11313734.htm">¡¾·­Ç½±Ø¿´¡¿·ÖÎö£º6ÔÂÏ°ÃæÁÙÖØ´ó¾ñÔñ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/11/n11313726.htm">·ÖÎö£º¶àÖØÒòËØÏÂ »ª¶û½Ö¿ªÊ¼Ô¶ÀëÖÐ¹²</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/3/n11297805.htm">¶ËÎç½ÚÉñÃØÏ°Ë× ÒõÑôÑ§ËµÕæ¿ÆÑ§</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/4/25/n11212559.htm">¡¾ÃüÀíÆª¡¿Å®ÃüÐ×»á¿Ë·òÂð£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/3/21/n11130065.htm">¡¾ÏÍºó´«¡¿ÔÚ»Ê¹¬ÀïÑø²ÏÖÖ×¯¼ÚµÄ»Êºó</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/8/n11309163.htm">ÄÐÓ¤¿ª¿Ú±¬´Ö ÒäÇ°ÉúÄðÊÛË½¾Æ Ï¸½ÚÈ«ºÏ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/9/n11310055.htm">ÁÖÖ¾ÁáÓëAKIRA»éºó3Ìì Æë·¢¸ÐÐ»ÎÄ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/9/n11310295.htm">Ì¨ÒÕÈËÂíÈçÁú¾ª´«²¡ÊÅ ÏíÊÙ80Ëê</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/9/n11310706.htm">ÖÐÉËÁÖÖ¾Áá»éÒö Â½Ã½ÍÆËÍ×ÔÃ½ÌåÎÄÕÂÒýÖÚÅ­</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/10/n11312504.htm">ÂíÈçÁú²¡ÊÅ ¶ùÈÌ±¯Í´ Ê×¶ÈËµÃ÷²»»ØÓ¦Ô­Òò</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/10/n11312045.htm">ÂíÈçÁúÒÆÁé¡°°åéë¡± ¿µ¿­¸ÐÉË£ºÎ´¼û×îºóÒ»Ãæ</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/5/n11302834.htm">¡¾ÐÂÎÅ¿´µã¡¿Ï°·Ã¶í ÍôÑóÐ»ÃÀ¹ú ±±¾©ÂÒÕó½Å£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/7/n11307522.htm">¡¾ÐÂÎÅ¿´µã¡¿¡°¸ú±±¾©´ïÐ­Òé¡±´¨ÆÕÐÅÐÄºÎÀ´</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/6/n11305546.htm">¡¾ÐÂÎÅ¿´µã¡¿ÃÀ¹ØË°»ò¼ÓÂë3Ç§ÒÚ ±±¾©»¹ÓÐÅÆ£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/8/n11309523.htm">BBC¼ÇÕßÎ¢ÐÅ±»·â ½â·â¹ý³ÌÁîÈËÃ«¹Çã¤È»</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/9/n11309637.htm">¡¾·­Ç½±Ø¿´¡¿ÖÐ¹²ÐÂ»ªÉçÓëÏ°½üÆ½³ª·´µ÷£¿</a></li>
-> <li><a href="http://www.epochtimes.com/gb/19/6/9/n11309790.htm">´«ÔÆÄÏ°ìÀíËïÐ¡¹û°¸Òý±±¾©¸ß²ã²»Âú</a></li>
+<strong>ç›¸å…³æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12241972.md#1">ä¹è§†é€€å¸‚ ä¸­å›½åŠä¸ªå¨±ä¹åœˆæ˜Žæ˜Ÿè¡€æœ¬æ— å½’</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
 <hr>
 
-#### ÊÖ»úÉÏ³¤°´²¢¸´ÖÆÏÂÃæ¶þÎ¬Âë·ÖÏí±¾ÎÄÕÂ£º<br><br><img src="http://www.hehaibao.com/qr/index.php?m=1&e=L&p=6&t=&d=https://github.com/dfh1/djy/blob/master/gb/19/6/11/n11315434.md%231" title="·ÖÏí±¾ÎÄÕÂ"></td><td VALIGN=TOP><a href="https://github.com/dfh1/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/wei-f1.jpg" title="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"  alt="ÖÐ¹²µÄÎ±»ðÆ­¾Ö"></a><br><a href="https://github.com/dfh1/yh/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/yong-h.jpg" title="ÓÀºãµÄ¼ûÖ¤"  alt="ÓÀºãµÄ¼ûÖ¤"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/shang-lnz.jpg" title="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"  alt="ÉÆÁ¼Å®×Ó±»ÖÐ¹²Í¶ÄÐÀÎ"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/huo-z3.jpg" title="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"  alt="¾¯ÎÀÄ¿»÷»îÕªÆ÷¹Ù"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/huo-z4.jpg" title="Ö¤ÈËÃèÊö»îÕª¿Ö²À"  alt="Ö¤ÈËÃèÊö»îÕª¿Ö²À"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/huo-z1.jpg" title="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"  alt="½Ò¿ª»îÕªÆ÷¹ÙºÚÄ»"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/ma-ks.jpg" title="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"  alt="Âí¿ËË¼µÄ³ÉÄ§Ö®Â·"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/chang-zs.jpg" title="²Ø×ÖÊ¯ ÔÌÌì»ú"  alt="²Ø×ÖÊ¯ ÔÌÌì»ú"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/st1.jpg" title="¹Ø×¢3ÒÚÈËÈýÍË"  alt="¹Ø×¢3ÒÚÈËÈýÍË"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/jie-t.jpg" title="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"  alt="½âÌåÖÐ¹²¸´ÐËÖÐ»ª"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/gao-zs.jpg" title="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"  alt="ÖÐ¹²ÆÈº¦Á¼ÐÄÂÉÊ¦"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/sj1.jpg" title="303ÍòÈË¾Ù±¨½­ÔóÃñ"  alt="303ÍòÈË¾Ù±¨½­ÔóÃñ"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/sj2.jpg" title="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"  alt="ÕâÐ©¹ÙÔ±ÎªºÎÆðËß½­ÔóÃñ"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/liangan.jpg" title="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"  alt="º£Ï¿Á½°¶µÄÇ¿ÁÒ¶Ô±È"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/15/5/5/n4427238.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/jia-ndzl.jpg" title="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"  alt="¼ÓÄÃ´ó×ÜÀíµÄºØÐÅ"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/xiao-wd.jpg" title="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"  alt="Ì½Ñ°ÕæÏà¼æÌýÔòÃ÷"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/yindu.jpg" title="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"  alt="Ó¡¶ÈÃ½Ìå±¨µÀ¶«·½"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/xie-j.jpg" title="²»Ò»ÑùµÄº£ÍâÐ£Ô°"  alt="²»Ò»ÑùµÄº£ÍâÐ£Ô°"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/li-up.jpg" title="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"  alt="´Ó´óÊ¦µ½Í½µÜµÄ´«Ææ"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/zfl2.jpg" title="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"  alt="ÒÚÍòÈËÓë¶«·½Ò»±¾ÆæÊé"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/zhen-h.jpg" title="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"  alt="´óÂ½¼û²»µ½µÄÕðº³³¡Ãæ"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/dalu-sk.jpg" title="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"  alt="ÈËÐÄÏòÉÆ ´óÂ½µ±³õÊ¢¿ö"></a><br><a href="https://github.com/dfh1/djy/blob/master/gb/9/10/15/n2689419.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/zfl1.jpg" title="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"  alt="×·Ñ°ÕæÀí ÕâÊé½²Ê²Ã´"></a><br><a href="https://github.com/dfh1/2/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dfh1/djy/master/gb/300/fq1.jpg" title="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"  alt="ÏÂÔØÃâ·Ñ·­Ç½Èí¼þ"></a><br></td></tr></table>
+
+<strong>ç¼–è¾‘æŽ¨èï¼š</strong>
+<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">ç¾Žå‚è®®å‘˜ï¼šä¸­å…±åˆ»æ„æŽ§åˆ¶æ–°å† ç—…æ¯’ä¿¡æ¯æµåŠ¨</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11263424.md#1" target="_blank">ã€å¾æ–‡ã€‘åˆ˜æ™“ï¼šå¤ä»£ä¾ å£«ä¸Žä¾ ä¹‰ç²¾ç¥ž</a></li><li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">æ¾³æ´²å„çº§æ”¿è¦è¤’å¥–ç¥è´ºæ³•è½®å¤§æ³•æ—¥</a></li>
+<hr>
+
+<strong>çƒ­é—¨æ–°é—»ï¼š</strong>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/8/n12240778.md#1">æ—¥ç±å¥³ç”ŸæŸ“ç–« å°æ¹¾é‡‡æ£€213äººæŠ—ä½“ ç»“æžœå‡ºç‚‰</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239553.md#1">è´µå·žå¤§å·´21æ­» ä¼ å¸æœºæ˜¯é€€ä¼å†›äººã€æ‹†è¿æˆ·</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/3/n12231462.md#1">ã€ç‹¬å®¶ã€‘ä¹ è¿‘å¹³æ€¯æ­¥å†›è¥çš„èƒŒåŽ</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12238373.md#1">ã€ä¸€çº¿é‡‡è®¿ã€‘è´µå·žé«˜è€ƒå¤§å·´å æ°´è‡³å°‘21æ­»</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239450.md#1">FBIååœ¨ç¾ŽåŽäººï¼šå¦‚è¢«å¼ºè¿«å›žå›½ å‘ç¾Žå›½æŠ¥å‘Š</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236320.md#1">60å²æ¨è´µåªšæ™•çœ©å‘ä½œ åè½®æ¤…å°±åŒ»æ£€æŸ¥</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12237412.md#1">æ”¶6å²å¥³å„¿é€çŽ«ç‘°èŠ±èŒ¶ å­™ä¿ªç›´å‘¼èˆä¸å¾—å–</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12236838.md#1">æµ™æ±Ÿå«è§†é«˜ç®¡çˆ†å·¨é¢å—è´¿ å‘¨å†¬é›¨å—ç‰µè¿žæŒ¨è½°</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/5/n12234872.md#1">TVBç¥­åŠ è¾£æ¡æ¬¾ éƒ‘æ•¬åŸºï¼šå‰æ‰€æœªæœ‰çš„ç™½è‰²ææ€–</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/7/n12239433.md#1">å¤å‡ºä¸é¡ºè½¬å½“ç½‘çº¢ï¼ŸèŒƒå†°å†°æŠ–éŸ³æ˜µç§°å¼•çƒ­è®®</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/6/n12237076.md#1">å¼ºåˆ¶äº”ä¸ªå­©å­æˆ’â€œç½‘ç˜¾â€ ç»“æžœéœ‡æƒŠå¦ˆå¦ˆ</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/4/23/n12056338.md#1">æ¸…æœä¸–ç•Œé¦–å¯Œä¼ç§‰é‰´ ç¼”é€ æ¬§ç¾Žå•†ç•Œä¼ è¯´</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/2/n12227327.md#1">1972å¹´è’‹ç»å›½å‘è¡¨ã€Šåå…±å¤å›½çš„æ€»ç›®æ ‡ç»ä¸æ”¹å˜ã€‹</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/5/27/n12141489.md#1">ã€åº·ç†™å¤§å¸ã€‘è¿œèµ´æœ”æ¼  ä¸‰å¾è‘›å°”ä¸¹</a></li>
+<li><a href="https://github.com/qtwlwd303/djy/blob/master/gb/20/7/3/n12230158.md#1">ç»˜ç”»ä¸­çš„ç˜Ÿç–«â€”â€”ç½ªä¸Žç½šçš„æ•…äº‹ï¼ˆä¸€ï¼‰</a></li>
+<hr>
+
+<strong>æœ¬æ–‡è½¬è‡ª<a href="https://www.epochtimes.com">å¤§çºªå…ƒ</a>ï¼ˆå›½å†…éœ€ç”¨<a href="https://github.com/qtwlwd303/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æ‰èƒ½è®¿é—®ï¼‰</strong><p>ä¸‹è½½<a href="https://github.com/qtwlwd303/www/blob/master/README.md#8">ç¿»å¢™è½¯ä»¶</a>æµè§ˆåŽŸæ–‡ï¼š<a href="https://www.epochtimes.com/gb/19/6/11/n11315434.htm">ç–‘æ‚£æŠ‘éƒç—‡ å¤§é™†çŸ¥åç”·é«˜éŸ³æ¨é˜³ä»Ž26æ¥¼å äº¡</a></p><hr>
+
+<strong>æ‰‹æœºä¸Šé•¿æŒ‰å¹¶å¤åˆ¶ä¸‹é¢äºŒç»´ç åˆ†äº«æœ¬æ–‡ç« ï¼š</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/qtwlwd303/djy/blob/master/gb/19/6/11/n11315434.md%231" title="åˆ†äº«æœ¬æ–‡ç« "></td><td VALIGN=TOP><a href="https://github.com/qtwlwd303/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/wei-f1.jpg" title="ä¸­å…±çš„ä¼ªç«éª—å±€"  alt="ä¸­å…±çš„ä¼ªç«éª—å±€"></a><br><a href="https://github.com/qtwlwd303/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/yong-h.jpg" title="æ°¸æ’çš„è§è¯"  alt="æ°¸æ’çš„è§è¯"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/shang-lnz.jpg" title="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"  alt="å–„è‰¯å¥³å­è¢«ä¸­å…±æŠ•ç”·ç‰¢"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/huo-z3.jpg" title="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"  alt="è­¦å«ç›®å‡»æ´»æ‘˜å™¨å®˜"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/huo-z4.jpg" title="è¯äººæè¿°æ´»æ‘˜ææ€–"  alt="è¯äººæè¿°æ´»æ‘˜ææ€–"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/huo-z1.jpg" title="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"  alt="æ­å¼€æ´»æ‘˜å™¨å®˜é»‘å¹•"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/ma-ks.jpg" title="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"  alt="é©¬å…‹æ€çš„æˆé­”ä¹‹è·¯"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/chang-zs.jpg" title="è—å­—çŸ³ è•´å¤©æœº"  alt="è—å­—çŸ³ è•´å¤©æœº"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/st1.jpg" title="å…³æ³¨3äº¿äººä¸‰é€€"  alt="å…³æ³¨3äº¿äººä¸‰é€€"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/jie-t.jpg" title="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"  alt="è§£ä½“ä¸­å…±å¤å…´ä¸­åŽ"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/gao-zs.jpg" title="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"  alt="ä¸­å…±è¿«å®³è‰¯å¿ƒå¾‹å¸ˆ"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/sj1.jpg" title="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"  alt="303ä¸‡äººä¸¾æŠ¥æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/sj2.jpg" title="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"  alt="è¿™äº›å®˜å‘˜ä¸ºä½•èµ·è¯‰æ±Ÿæ³½æ°‘"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/liangan.jpg" title="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"  alt="æµ·å³¡ä¸¤å²¸çš„å¼ºçƒˆå¯¹æ¯”"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/jia-ndzl.jpg" title="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"  alt="åŠ æ‹¿å¤§æ€»ç†çš„è´ºä¿¡"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/xiao-wd.jpg" title="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"  alt="æŽ¢å¯»çœŸç›¸å…¼å¬åˆ™æ˜Ž"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/yindu.jpg" title="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"  alt="å°åº¦åª’ä½“æŠ¥é“ä¸œæ–¹"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/xie-j.jpg" title="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"  alt="ä¸ä¸€æ ·çš„æµ·å¤–æ ¡å›­"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/li-up.jpg" title="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"  alt="ä»Žå¤§å¸ˆåˆ°å¾’å¼Ÿçš„ä¼ å¥‡"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/zfl2.jpg" title="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"  alt="äº¿ä¸‡äººä¸Žä¸œæ–¹ä¸€æœ¬å¥‡ä¹¦"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/zhen-h.jpg" title="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"  alt="å¤§é™†è§ä¸åˆ°çš„éœ‡æ’¼åœºé¢"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/dalu-sk.jpg" title="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"  alt="äººå¿ƒå‘å–„ å¤§é™†å½“åˆç››å†µ"></a><br><a href="https://github.com/qtwlwd303/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/zfl1.jpg" title="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"  alt="è¿½å¯»çœŸç† è¿™ä¹¦è®²ä»€ä¹ˆ"></a><br><a href="https://github.com/qtwlwd303/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/qtwlwd303/djy/master/gb/300/fq1.jpg" title="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"  alt="ä¸‹è½½å…è´¹ç¿»å¢™è½¯ä»¶"></a><br></td></tr></table>
